--- a/css/root.scss
+++ b/css/root.scss
@@ -1,5 +1,30 @@
 $background-color:#E0F8FF;
 
+@mixin scrollbar {
+    /* width */
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    /* Track */
+    &::-webkit-scrollbar-track {
+        background: #C4C4C4; 
+        border-radius: 0.5em;
+    }
+    
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: #F4F4F4; 
+        border-radius: 0.5em;
+        border: 3px #C4C4C4 solid;
+    }
+    
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: #555; 
+    }
+}
+
 // #region main colors
 $primary-color:#0055FF;
 $success-color:#00B277;
