--- a/css/controls.css
+++ b/css/controls.css
@@ -142,6 +142,12 @@ body::-webkit-scrollbar-thumb:hover {
   text-decoration: none;
   color: #0055FF;
   cursor: pointer;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+.link:hover {
+  color: #0047D6;
 }
 
 .color-danger {
