--- a/css/single.css
+++ b/css/single.css
@@ -142,6 +142,12 @@ body::-webkit-scrollbar-thumb:hover {
   text-decoration: none;
   color: #0055FF;
   cursor: pointer;
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+.link:hover {
+  color: #0047D6;
 }
 
 .color-danger {
@@ -871,6 +877,7 @@ main .imgs > div button {
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
+  z-index: 5;
 }
 
 main .imgs > div button svg {
@@ -1141,7 +1148,8 @@ section.mainDetails .comments form .strength-weakness > div > div {
 section.mainDetails .comments form .strength-weakness > div > div input {
   width: 60%;
   height: 50px;
-  margin: 0 1em;
+  margin: 0;
+  margin-left: 1em;
   border-radius: 8px;
 }
 
@@ -1324,13 +1332,26 @@ section.mainDetails .comments .comment:last-child {
      -moz-appearance: none;
           appearance: none;
   cursor: pointer;
-  border: none;
+  border: 2px solid #fff;
   outline: none;
-  background-color: transparent;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  width: 50px;
+  height: 50px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  -webkit-transition: background-color 0.3s,-webkit-transform 0.3s;
+  transition: background-color 0.3s,-webkit-transform 0.3s;
+  transition: transform 0.3s,background-color 0.3s;
+  transition: transform 0.3s,background-color 0.3s,-webkit-transform 0.3s;
+  z-index: 5;
+}
+
+.cards button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .cards button#right {
@@ -1353,6 +1374,46 @@ section.mainDetails .comments .comment:last-child {
 .cards button#left:hover {
   -webkit-transform: translateX(-5px);
           transform: translateX(-5px);
+}
+
+.fade-l {
+  position: absolute;
+  height: 100%;
+  margin: 1em 0;
+  top: 0;
+  left: 0;
+  width: 5em;
+  z-index: 1;
+  pointer-events: none;
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), color-stop(90%, #e0f8ff));
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), #e0f8ff 90%);
+}
+
+.fade-r {
+  position: absolute;
+  height: 100%;
+  margin: 1em 0;
+  top: 0;
+  right: 0;
+  width: 4em;
+  z-index: 1;
+  pointer-events: none;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(90%, #e0f8ff));
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), #e0f8ff 90%);
+}
+
+.imgs .fade-l, .imgs .fade-r {
+  margin: 0;
+}
+
+.imgs .fade-r {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(90%, white));
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), white 90%);
+}
+
+.imgs .fade-l {
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), color-stop(90%, white));
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), white 90%);
 }
 
 input.color-picker {
