--- a/css/controls.scss
+++ b/css/controls.scss
@@ -281,11 +281,12 @@ input[type=radio]:not(input.color-picker){
         background-color: transparent;
     }
     &::after{
+        
         position: absolute;
+        width: 1em;
+        height: 1em;
         top: 50%;
         left: 50%;
-        width: 60%;
-        height: 60%;
         content: ' ';
         border-radius: 50%;
         background-color: $primary-color;
