--- a/css/cardOverview.css
+++ b/css/cardOverview.css
@@ -229,6 +229,84 @@
   border-radius: 0.5em;
 }
 
+.oveview > main.sendInfo > div {
+  width: 100%;
+  margin: 0.5em 0;
+  padding: 1em 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.oveview > main.sendInfo > div:last-child {
+  border: none;
+}
+
+.oveview > main.sendInfo > div.address > div, .oveview > main.sendInfo > div.sendMethod > div {
+  margin: 0.5em 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.oveview > main.sendInfo > div.address > div span, .oveview > main.sendInfo > div.sendMethod > div span {
+  font-size: 13px;
+  margin: 0 auto;
+}
+
+.oveview > main.sendInfo > div.receiver {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 4em;
+}
+
+.oveview > main.sendInfo > div.receiver h4 {
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+.oveview > main.sendInfo > div.receiver div {
+  margin-right: 1em;
+}
+
+.oveview > main.sendInfo > div button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: absolute;
+  top: 1em;
+  left: 2em;
+  font-weight: bolder;
+}
+
+.oveview > main.sendInfo > div button svg {
+  margin-left: 1em;
+  stroke: #0055FF;
+}
+
+.oveview > main.sendInfo > div button:hover {
+  color: #0047D6;
+}
+
+.oveview > main.sendInfo > div button:hover svg {
+  stroke: #0047D6;
+}
+
 .oveview aside {
   border-radius: 1em;
   border: 3px solid #0055FF;
@@ -254,6 +332,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  margin: 0.5em 0;
 }
 
 .oveview aside > div:last-of-type {
@@ -306,6 +385,64 @@
 
 .oveview aside button {
   margin: 0;
+}
+
+.modal {
+  position: fixed;
+  inset: 0;
+  z-index: 8;
+}
+
+.modal > .bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+}
+
+.modal > form {
+  margin: 0 5em;
+  top: 10%;
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border: 3px solid #0055FF;
+  border-radius: 1em;
+  padding: 1em 2em;
+  z-index: 10;
+  position: relative;
+}
+
+.modal > form h4 {
+  margin-bottom: 1em;
+}
+
+.modal > form > div {
+  margin: 0.5em 0;
+}
+
+.modal > form > button {
+  margin-right: auto;
+}
+
+.modal > form > .close {
+  background-color: transparent;
+  color: #FF2F2F;
+  border: none;
+  outline: none;
+  position: absolute;
+  top: 0.5em;
+  left: 1em;
+  cursor: pointer;
+  width: auto;
+  font-size: 1.5em;
+  font-weight: bolder;
+  -webkit-transition: color .2s;
+  transition: color .2s;
+}
+
+.modal > form > .close:hover {
+  color: #D40C0C;
 }
 
 .empty {
